kubernetes/apps/default/mailkeep/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mailkeep
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mailkeep
      app.kubernetes.io/instance: mailkeep
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
